<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="88dp"
        android:layout_height="52dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/autoCompleteTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_people_fill"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="159dp"
        android:text="@string/action_register"
        android:theme="@style/Theme.Calculator.Primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="21dp"
        android:text="@string/register_for_mathapi"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/autoCompleteTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView2"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="39dp"
        android:hint="@string/email"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="13dp"
        android:hint="@string/full_name"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/autoCompleteTextView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>